cmake_minimum_required(VERSION 3.14)
project(worker)

set(CMAKE_CXX_STANDARD 14)

add_definitions(-DMS_LITTLE_ENDIAN)

include_directories(/usr/local/include/srtp2)

include_directories(deps/netstring/netstring-c)
include_directories(fuzzer/include)
include_directories(fuzzer/include/RTC)
include_directories(fuzzer/include/RTC/RTCP)
include_directories(include)
include_directories(include/Channel)
include_directories(include/handles)
include_directories(include/RTC)
include_directories(include/RTC/Codecs)
include_directories(include/RTC/RembServer)
include_directories(include/RTC/RTCP)

add_executable(
        mediasoup-worker
        deps/netstring/netstring-c/netstring.c
        deps/netstring/netstring-c/netstring.h
        fuzzer/include/RTC/RTCP/FuzzerBye.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPs.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsAfb.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsFir.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsLei.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsPli.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsRemb.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsRpsi.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsSli.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsTst.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackPsVbcm.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtp.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtpEcn.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtpNack.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtpSrReq.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtpTllei.hpp
        fuzzer/include/RTC/RTCP/FuzzerFeedbackRtpTmmb.hpp
        fuzzer/include/RTC/RTCP/FuzzerPacket.hpp
        fuzzer/include/RTC/RTCP/FuzzerReceiverReport.hpp
        fuzzer/include/RTC/RTCP/FuzzerSdes.hpp
        fuzzer/include/RTC/RTCP/FuzzerSenderReport.hpp
        fuzzer/include/RTC/RTCP/FuzzerXr.hpp
        fuzzer/include/RTC/FuzzerRtpPacket.hpp
        fuzzer/include/RTC/FuzzerStunPacket.hpp
        fuzzer/src/RTC/RTCP/FuzzerBye.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPs.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsAfb.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsFir.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsLei.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsPli.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsRemb.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsRpsi.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsSli.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsTst.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackPsVbcm.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtp.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtpEcn.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtpNack.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtpSrReq.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtpTllei.cpp
        fuzzer/src/RTC/RTCP/FuzzerFeedbackRtpTmmb.cpp
        fuzzer/src/RTC/RTCP/FuzzerPacket.cpp
        fuzzer/src/RTC/RTCP/FuzzerReceiverReport.cpp
        fuzzer/src/RTC/RTCP/FuzzerSdes.cpp
        fuzzer/src/RTC/RTCP/FuzzerSenderReport.cpp
        fuzzer/src/RTC/RTCP/FuzzerXr.cpp
        fuzzer/src/RTC/FuzzerRtpPacket.cpp
        fuzzer/src/RTC/FuzzerStunPacket.cpp
        fuzzer/src/fuzzer.cpp
        include/Channel/Notifier.hpp
        include/Channel/Request.hpp
        include/Channel/UnixStreamSocket.hpp
        include/handles/SignalsHandler.hpp
        include/handles/TcpConnection.hpp
        include/handles/TcpServer.hpp
        include/handles/Timer.hpp
        include/handles/UdpSocket.hpp
        include/handles/UnixStreamSocket.hpp
        include/RTC/Codecs/Codecs.hpp
        include/RTC/Codecs/H264.hpp
        include/RTC/Codecs/PayloadDescriptorHandler.hpp
        include/RTC/Codecs/VP8.hpp
        include/RTC/Codecs/VP9.hpp
        include/RTC/RembServer/AimdRateControl.hpp
        include/RTC/RembServer/BandwidthUsage.hpp
        include/RTC/RembServer/InterArrival.hpp
        include/RTC/RembServer/OveruseDetector.hpp
        include/RTC/RembServer/OveruseEstimator.hpp
        include/RTC/RembServer/RateControlInput.hpp
        include/RTC/RembServer/RateControlRegion.hpp
        include/RTC/RembServer/RemoteBitrateEstimator.hpp
        include/RTC/RembServer/RemoteBitrateEstimatorAbsSendTime.hpp
        include/RTC/RembServer/RemoteBitrateEstimatorSingleStream.hpp
        include/RTC/RTCP/Bye.hpp
        include/RTC/RTCP/CompoundPacket.hpp
        include/RTC/RTCP/Feedback.hpp
        include/RTC/RTCP/FeedbackItem.hpp
        include/RTC/RTCP/FeedbackPs.hpp
        include/RTC/RTCP/FeedbackPsAfb.hpp
        include/RTC/RTCP/FeedbackPsFir.hpp
        include/RTC/RTCP/FeedbackPsLei.hpp
        include/RTC/RTCP/FeedbackPsPli.hpp
        include/RTC/RTCP/FeedbackPsRemb.hpp
        include/RTC/RTCP/FeedbackPsRpsi.hpp
        include/RTC/RTCP/FeedbackPsSli.hpp
        include/RTC/RTCP/FeedbackPsTst.hpp
        include/RTC/RTCP/FeedbackPsVbcm.hpp
        include/RTC/RTCP/FeedbackRtp.hpp
        include/RTC/RTCP/FeedbackRtpEcn.hpp
        include/RTC/RTCP/FeedbackRtpNack.hpp
        include/RTC/RTCP/FeedbackRtpSrReq.hpp
        include/RTC/RTCP/FeedbackRtpTllei.hpp
        include/RTC/RTCP/FeedbackRtpTmmb.hpp
        include/RTC/RTCP/Packet.hpp
        include/RTC/RTCP/ReceiverReport.hpp
        include/RTC/RTCP/Sdes.hpp
        include/RTC/RTCP/SenderReport.hpp
        include/RTC/RTCP/XR.hpp
        include/RTC/RTCP/XrDelaySinceLastRr.hpp
        include/RTC/RTCP/XrReceiverReferenceTime.hpp
        include/RTC/AudioLevelObserver.hpp
        include/RTC/Consumer.hpp
        include/RTC/DataConsumer.hpp
        include/RTC/DataProducer.hpp
        include/RTC/DtlsTransport.hpp
        include/RTC/IceCandidate.hpp
        include/RTC/IceServer.hpp
        include/RTC/KeyFrameRequestManager.hpp
        include/RTC/NackGenerator.hpp
        include/RTC/Parameters.hpp
        include/RTC/PipeConsumer.hpp
        include/RTC/PipeTransport.hpp
        include/RTC/PlainRtpTransport.hpp
        include/RTC/PortManager.hpp
        include/RTC/Producer.hpp
        include/RTC/RateCalculator.hpp
        include/RTC/RembClient.hpp
        include/RTC/Router.hpp
        include/RTC/RtpDictionaries.hpp
        include/RTC/RtpHeaderExtensionIds.hpp
        include/RTC/RtpListener.hpp
        include/RTC/RtpObserver.hpp
        include/RTC/RtpPacket.hpp
        include/RTC/RtpStream.hpp
        include/RTC/RtpStreamRecv.hpp
        include/RTC/RtpStreamSend.hpp
        include/RTC/SctpAssociation.hpp
        include/RTC/SctpDictionaries.hpp
        include/RTC/SctpListener.hpp
        include/RTC/SeqManager.hpp
        include/RTC/SimpleConsumer.hpp
        include/RTC/SimulcastConsumer.hpp
        include/RTC/SrtpSession.hpp
        include/RTC/StunPacket.hpp
        include/RTC/SvcConsumer.hpp
        include/RTC/TcpConnection.hpp
        include/RTC/TcpServer.hpp
        include/RTC/Transport.hpp
        include/RTC/TransportTuple.hpp
        include/RTC/UdpSocket.hpp
        include/RTC/WebRtcTransport.hpp
        include/common.hpp
        include/DepLibSRTP.hpp
        include/DepLibUV.hpp
        include/DepOpenSSL.hpp
        include/DepUsrSCTP.hpp
        include/json.hpp
        include/Logger.hpp
        include/LogLevel.hpp
        include/MediaSoupErrors.hpp
        include/Settings.hpp
        include/Utils.hpp
        include/Worker.hpp
        src/Channel/Notifier.cpp
        src/Channel/Request.cpp
        src/Channel/UnixStreamSocket.cpp
        src/handles/SignalsHandler.cpp
        src/handles/TcpConnection.cpp
        src/handles/TcpServer.cpp
        src/handles/Timer.cpp
        src/handles/UdpSocket.cpp
        src/handles/UnixStreamSocket.cpp
        src/RTC/Codecs/Codecs.cpp
        src/RTC/Codecs/H264.cpp
        src/RTC/Codecs/VP8.cpp
        src/RTC/Codecs/VP9.cpp
        src/RTC/RembServer/AimdRateControl.cpp
        src/RTC/RembServer/InterArrival.cpp
        src/RTC/RembServer/OveruseDetector.cpp
        src/RTC/RembServer/OveruseEstimator.cpp
        src/RTC/RembServer/RemoteBitrateEstimatorAbsSendTime.cpp
        src/RTC/RembServer/RemoteBitrateEstimatorSingleStream.cpp
        src/RTC/RTCP/Bye.cpp
        src/RTC/RTCP/CompoundPacket.cpp
        src/RTC/RTCP/Feedback.cpp
        src/RTC/RTCP/FeedbackPs.cpp
        src/RTC/RTCP/FeedbackPsAfb.cpp
        src/RTC/RTCP/FeedbackPsFir.cpp
        src/RTC/RTCP/FeedbackPsLei.cpp
        src/RTC/RTCP/FeedbackPsPli.cpp
        src/RTC/RTCP/FeedbackPsRemb.cpp
        src/RTC/RTCP/FeedbackPsRpsi.cpp
        src/RTC/RTCP/FeedbackPsSli.cpp
        src/RTC/RTCP/FeedbackPsTst.cpp
        src/RTC/RTCP/FeedbackPsVbcm.cpp
        src/RTC/RTCP/FeedbackRtp.cpp
        src/RTC/RTCP/FeedbackRtpEcn.cpp
        src/RTC/RTCP/FeedbackRtpNack.cpp
        src/RTC/RTCP/FeedbackRtpSrReq.cpp
        src/RTC/RTCP/FeedbackRtpTllei.cpp
        src/RTC/RTCP/FeedbackRtpTmmb.cpp
        src/RTC/RTCP/Packet.cpp
        src/RTC/RTCP/ReceiverReport.cpp
        src/RTC/RTCP/Sdes.cpp
        src/RTC/RTCP/SenderReport.cpp
        src/RTC/RTCP/XR.cpp
        src/RTC/RTCP/XrDelaySinceLastRr.cpp
        src/RTC/RTCP/XrReceiverReferenceTime.cpp
        src/RTC/RtpDictionaries/Media.cpp
        src/RTC/RtpDictionaries/Parameters.cpp
        src/RTC/RtpDictionaries/RtcpFeedback.cpp
        src/RTC/RtpDictionaries/RtcpParameters.cpp
        src/RTC/RtpDictionaries/RtpCodecMimeType.cpp
        src/RTC/RtpDictionaries/RtpCodecParameters.cpp
        src/RTC/RtpDictionaries/RtpEncodingParameters.cpp
        src/RTC/RtpDictionaries/RtpHeaderExtensionParameters.cpp
        src/RTC/RtpDictionaries/RtpHeaderExtensionUri.cpp
        src/RTC/RtpDictionaries/RtpParameters.cpp
        src/RTC/RtpDictionaries/RtpRtxParameters.cpp
        src/RTC/SctpDictionaries/SctpStreamParameters.cpp
        src/RTC/AudioLevelObserver.cpp
        src/RTC/Consumer.cpp
        src/RTC/DataConsumer.cpp
        src/RTC/DataProducer.cpp
        src/RTC/DtlsTransport.cpp
        src/RTC/IceCandidate.cpp
        src/RTC/IceServer.cpp
        src/RTC/KeyFrameRequestManager.cpp
        src/RTC/NackGenerator.cpp
        src/RTC/PipeConsumer.cpp
        src/RTC/PipeTransport.cpp
        src/RTC/PlainRtpTransport.cpp
        src/RTC/PortManager.cpp
        src/RTC/Producer.cpp
        src/RTC/RateCalculator.cpp
        src/RTC/RembClient.cpp
        src/RTC/Router.cpp
        src/RTC/RtpListener.cpp
        src/RTC/RtpObserver.cpp
        src/RTC/RtpPacket.cpp
        src/RTC/RtpStream.cpp
        src/RTC/RtpStreamRecv.cpp
        src/RTC/RtpStreamSend.cpp
        src/RTC/SctpAssociation.cpp
        src/RTC/SctpListener.cpp
        src/RTC/SeqManager.cpp
        src/RTC/SimpleConsumer.cpp
        src/RTC/SimulcastConsumer.cpp
        src/RTC/SrtpSession.cpp
        src/RTC/StunPacket.cpp
        src/RTC/SvcConsumer.cpp
        src/RTC/TcpConnection.cpp
        src/RTC/TcpServer.cpp
        src/RTC/Transport.cpp
        src/RTC/TransportTuple.cpp
        src/RTC/UdpSocket.cpp
        src/RTC/WebRtcTransport.cpp
        src/Utils/Crypto.cpp
        src/Utils/File.cpp
        src/Utils/IP.cpp
        src/DepLibSRTP.cpp
        src/DepLibUV.cpp
        src/DepOpenSSL.cpp
        src/DepUsrSCTP.cpp
        src/Logger.cpp
        src/main.cpp
        src/Settings.cpp
        src/Worker.cpp)


target_link_libraries(
        mediasoup-worker
        /usr/local/lib/libusrsctp.a
        /usr/local/lib/libsrtp2.a
        /usr/local/lib/libssl.a
        /usr/local/lib/libcrypto.a
        uv
        pthread
        dl
)